lab1/k8s/veggie-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veggie-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veggie-node-app
  template:
    metadata:
     labels:
       app: veggie-node-app
    spec:
      containers:
        - image: bysdudent/veggie-nodejs:lab1
          name: veggie-node-app
          ports:
            - containerPort: 3000
